--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-family: sans-serif;
 }
 /*div {border: thin dotted red;}*/
 html {
-background-image: url('https://i.pinimg.com/originals/26/d0/df/26d0df9075d59fdc7a3a1da2a99ab358.gif');
+background-image: url('https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/andromeda-galaxy-royalty-free-image-1585682435.jpg');
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;
