--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-family: sans-serif;
 }
 /*div {border: thin dotted red;}*/
 html {
-background-image: url('https://dg.imgix.net/receive-the-holy-spirit-6ktm37jv-en/landscape/receive-the-holy-spirit-6ktm37jv-55780588ff5244e453c841dc40fc5898.jpg?ts=1581024652&ixlib=rails-4.1.0&auto=format%2Ccompress&fit=min&w=700&h=394&dpr=2&ch=Width%2CDPR');
+background-image: url('https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/andromeda-galaxy-royalty-free-image-1585682435.jpg');
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;
