--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-family: sans-serif;
 }
 /*div {border: thin dotted red;}*/
 html {
-background-image: url('https://i.pinimg.com/originals/96/7e/5a/967e5a1e0d7078684ffc3fd1e4e64811.jpg');
+background-image: url('https://www.wallpaperup.com/uploads/wallpapers/2013/12/27/206297/6f1f1b014faad0eb94cbdd053e97c4a5.jpg');
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;
