--- a/style.css
+++ b/style.css
@@ -12,68 +12,68 @@ background-size: cover;
 height: 100%
 }
 .menu ul{
-display: inline-flex;
-margin: 50px;
+  display: inline-flex;
+  margin: 50px;
 }
 .menu ul li{
-list-style: none;
-margin: 0 1.5vw;
-cursor: pointer;
-font-size: 1vw
+  list-style: none;
+  margin: 0 1.5vw;
+  cursor: pointer;
+  font-size: 1vw
 }
 a:link{
-color: #FFFFFF;
-text-decoration: none;
+  color: #74a0ae;
+  text-decoration: none;
 }
 a:visited{
-color: #FFFFFF;
-text-decoration: none;
+  color: #74a0ae;
+  text-decoration: none;
 }
 a:hover{
-color: #FFFFFF;
-font-weight: bold;
+  color: #384f56;
+  font-weight: bold;
 }
 .logo img{
-width: 3.5vw;
-margin-top: -1vw;
-margin-right: 2vw;
-margin-left: -1vw;
+  width: 3.5vw;
+  margin-top: -1vw;
+  margin-right: 2vw;
+  margin-left: -1vw;
 }
 .main{
-top: 8vw;
-left: 4.2vw;
-position: absolute;
+  top: 8vw;
+  left: 4.2vw;
+  position: absolute;
 }
 .main-text{
-width: 50%;
-float: left;
-left: 4.2vw;
+  width: 50%;
+  float: left;
+  left: 4.2vw;
 }
 .main-text h1{
-color: #FFFFFF;
-font-size: 3vw;
-margin-bottom: 1vw
+  color: #7fb8d6;
+  font-size: 3vw;
+  margin-bottom: 1vw
 }
 .main-text ul{
-color: #FFFFFF;
-font-size: 1vw;
-margin-left: 1vw;
+  color: #756f6f;
+  font-size: 1vw;
+  margin-left: 1vw;
 }
 .main-text p{
-color: #FFFFFF;
-font-size: 1vw;
-margin-left: 1vw;
+  color: #756f6f;
+  font-size: 1vw;
+  margin-left: 1vw;
 }
 .main-text h3{
-color: #FFFFFF;
-font-size: 1.5vw;
+  color: #7fb8d6;
+  font-size: 1.5vw;
 }
 footer {
-margin-top: 45vw;
-margin-left: 4.2vw;
-padding-bottom: 1vw;
+  margin-top: 45vw;
+  margin-left: 4.2vw;
+  padding-bottom: 1vw;
 }
 footer p {
-color: #FFFFFF;
-font-size: 1vw;
+  color: #756f6f;
+  font-size: 1vw;
 }
