--- a/style.css
+++ b/style.css
@@ -22,15 +22,15 @@ height: 100%
   font-size: 1vw
 }
 a:link{
-  color: #74a0ae;
+  color: #FFFFFF;
   text-decoration: none;
 }
 a:visited{
-  color: #74a0ae;
+  color: #FFFFFF;
   text-decoration: none;
 }
 a:hover{
-  color: #384f56;
+  color: #FFFFFF;
   font-weight: bold;
 }
 .logo img{
@@ -55,17 +55,17 @@ a:hover{
   margin-bottom: 1vw
 }
 .main-text ul{
-  color: #756f6f;
+  color: #FFFFFF;
   font-size: 1vw;
   margin-left: 1vw;
 }
 .main-text p{
-  color: #756f6f;
+  color: #FFFFFF;
   font-size: 1vw;
   margin-left: 1vw;
 }
 .main-text h3{
-  color: #7fb8d6;
+  color: #FFFFFF;
   font-size: 1.5vw;
 }
 footer {
@@ -74,6 +74,6 @@ footer {
   padding-bottom: 1vw;
 }
 footer p {
-  color: #756f6f;
+  color: #FFFFFF;
   font-size: 1vw;
 }
