--- a/style.css
+++ b/style.css
@@ -22,15 +22,15 @@ height: 100%
   font-size: 1vw
 }
 a:link{
-  color: #FFFFFF;
+  color: #78C1F3;
   text-decoration: none;
 }
 a:visited{
-  color: #FFFFFF;
+  color: #78C1F3;
   text-decoration: none;
 }
 a:hover{
-  color: #FFFFFF;
+  color: #78C1F3;
   font-weight: bold;
 }
 .main{
@@ -44,7 +44,7 @@ a:hover{
   left: 4.2vw;
 }
 .main-text h1{
-  color: #297BDD;
+  color: #78C1F3;
   font-size: 3vw;
   margin-bottom: 1vw
 }
@@ -59,7 +59,7 @@ a:hover{
   margin-left: 1vw;
 }
 .main-text h3{
-  color: #297BDD;
+  color: #78C1F3;
   font-size: 1.5vw;
 }
 footer {
