--- a/style.css
+++ b/style.css
@@ -49,12 +49,12 @@ a:hover{
   margin-bottom: 1vw
 }
 .main-text ul{
-  color: #FFFFFF;
+  color: #94ADBE;
   font-size: 1vw;
   margin-left: 1vw;
 }
 .main-text p{
-  color: #FFFFFF;
+  color: #94ADBE;
   font-size: 1vw;
   margin-left: 1vw;
 }
@@ -68,6 +68,6 @@ footer {
   padding-bottom: 1vw;
 }
 footer p {
-  color: #FFFFFF;
+  color: #94ADBE;
   font-size: 1vw;
 }
